k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - fabster-k8s.com
        - www.fabster-k8s.com
      secretName: fabster-k8s-com
  rules:
    - http:
        paths:
          - path: /prometheus2
            backend:
              serviceName: prometheus-main
              servicePort: 9090
    - host: fabster-k8s.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
          - path: /prometheus/?(.*)
            backend:
              serviceName: prometheus-main
              servicePort: 9090
          - path: /alertmanager/?(.*)
            backend:
              serviceName: alertmanager-main
              servicePort: 9093
    - host: www.fabster-k8s.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
